# blom

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE.txt  README.md  build.sh  init.sh  replace.sh
cmake/: android.cmake  common.cmake  linux.cmake  windows.cmake
decision_forests/: CCMakeHelper.cmake  CCMakeProtos.cmake  CMakeLists.txt  config.h  example_builder.cc  example_builder.h  generate_cpp_from_protos.cmake  vertical_dataset.h  vertical_dataset_test.cc
decision_forests/dataset/: CCMakeProtos.cmake  CMakeLists.txt  all_formats.h  csv_example_reader.cc  csv_example_reader.h  csv_example_writer.cc  csv_example_writer.h  data_spec.cc  data_spec.h  data_spec_inference.cc  data_spec_inference.h  data_spec_test.cc  dataset_library.cc  dataset_library.h  example_builder.cc  example_builder.h  example_builder_test.cc  example_reader.cc  example_reader.h  example_reader_interface.h  example_reader_test.cc  example_writer.cc  example_writer.h  example_writer_interface.h  example_writer_test.cc  formats.cc  formats.h  formats_registration.cc  formats_registration.h  formats_test.cc  types.cc  types.h  vertical_dataset.cc  vertical_dataset.h  vertical_dataset_io.cc  vertical_dataset_io.h  vertical_dataset_io_test.cc  vertical_dataset_test.cc  weight.cc  weight.h  (+1 more)
decision_forests/e2e_test_utils/: CMakeLists.txt  test_utils.cc  test_utils.h
decision_forests/learner/: CMakeLists.txt  abstract_learner.cc  abstract_learner.h  abstract_learner.proto  abstract_learner_test.cc  learner_library.cc  learner_library.h  learner_library_test.cc  learners_registration.cc  learners_registration.h
decision_forests/learner/cart/: CMakeLists.txt  cart.cc  cart.h  cart.proto  cart_test.cc
decision_forests/learner/decision_tree/: CMakeLists.txt  decision_tree.proto  generic_parameters.cc  generic_parameters.h  oblique.cc  oblique.h  splitter_accumulator.h  splitter_accumulator_uplift.h  splitter_scanner.h  splitter_structure.h  training.cc  training.h  training_test.cc  utils.cc  utils.h
decision_forests/learner/generic_worker/: CMakeLists.txt  generic_worker.cc  generic_worker.h  generic_worker.proto  generic_worker_test.cc
decision_forests/learner/hyperparameters_optimizer/: CMakeLists.txt  hyperparameters_optimizer.cc  hyperparameters_optimizer.h  hyperparameters_optimizer.proto  hyperparameters_optimizer_test.cc  optimizer_interface.h
decision_forests/learner/hyperparameters_optimizer/optimizers/: CMakeLists.txt  random.cc  random.h  random.proto  random_test.cc
decision_forests/learner/random_forest/: CMakeLists.txt  random_forest.cc  random_forest.h  random_forest.proto  random_forest_hparams_templates.cc  random_forest_test.cc  random_forest_tuner_test.cc
decision_forests/metric/: CMakeLists.txt  comparison.cc  comparison.h  comparison_test.cc  metric.cc  metric.h  metric.proto  metric_test.cc  ranking_mrr.cc  ranking_mrr.h  ranking_ndcg.cc  ranking_ndcg.h  report.cc  report.h  report_test.cc  uplift.cc  uplift.h  uplift_test.cc
decision_forests/model/: CMakeLists.txt  abstract_model.cc  abstract_model.h  abstract_model.proto  fast_engine_factory.cc  fast_engine_factory.h  metadata.cc  metadata.h  model_engine_wrapper.cc  model_engine_wrapper.h  model_library.cc  model_library.h  model_library_test.cc  model_registration.cc  model_registration.h  model_testing.h  models_registration.cc  models_registration.h  prediction.proto
decision_forests/model/decision_tree/: CMakeLists.txt  builder.cc  builder.h  builder_test.cc  decision_forest_interface.h  decision_tree.cc  decision_tree.h  decision_tree.proto  decision_tree_io.cc  decision_tree_io.h  decision_tree_io_blob_sequence.cc  decision_tree_io_blob_sequence.h  decision_tree_io_interface.h  decision_tree_test.cc  structure_analysis.cc  structure_analysis.h
decision_forests/model/random_forest/: CMakeLists.txt  random_forest.cc  random_forest.h  random_forest.proto  random_forest_test.cc
decision_forests/serving/: CMakeLists.txt  example_set.cc  example_set.h  example_set_model_wrapper.h  example_set_test.cc  fast_engine.h  fast_engine_registration.cc  fast_engine_registration.h
decision_forests/serving/decision_forest/: CMakeLists.txt  decision_forest.cc  decision_forest.h  decision_forest_serving.cc  decision_forest_serving.h  decision_forest_test.cc  generic_fast_engine.cc  generic_fast_engine.h  opt_pred_fast_engine.cc  opt_pred_fast_engine.h  register_engines.cc  register_engines.h  utils.cc  utils.h
decision_forests/utils/: CCMakeProtos.cmake  CMakeLists.txt  accurate_sum_test.cc  adaptive_work.cc  adaptive_work.h  adaptive_work_test.cc  bitmap.cc  bitmap.h  bitmap_test.cc  blob_sequence.cc  blob_sequence.h  blob_sequence_test.cc  bytestream.cc  bytestream_test.cc  circular_buffer.h  circular_buffer_test.cc  concurrency.cc  concurrency.h  concurrency_channel.h  concurrency_default.cc  concurrency_default.h  concurrency_streamprocessor.h  concurrency_test.cc  csv.cc  csv.h  csv_test.cc  distribution.cc  distribution.h  distribution.proto  distribution_test.cc  evaluation.cc  evaluation.h  evaluation_test.cc  filesystem.cc  filesystem.h  filesystem_default.cc  filesystem_default.h  filesystem_test.cc  fold_generator.cc  fold_generator.h  (+35 more)
decision_forests/utils/distribute/: CMakeLists.txt  core.cc  core.h  distribute.cc  distribute.h  distribute_test.cc  test_utils.cc  test_utils.h  toy_worker.cc  toy_worker.h  utils.cc  utils.h
decision_forests/utils/distribute/implementations/: CMakeLists.txt
decision_forests/utils/distribute/implementations/multi_thread/: CMakeLists.txt  multi_thread.cc  multi_thread.h  multi_thread.proto
decision_forests/utils/feature_importance/: CMakeLists.txt  feature_importance.cc  feature_importance.h
example/: CMakeLists.txt  example.cc
tests/: CMakeLists.txt  all_tests.cmake  dataset_tests.cmake  learner_cart_tests.cmake  learner_decision_tree_tests.cmake  learner_generic_worker_tests.cmake  learner_hyperparameters_optimizers_tests.cmake  learner_optimizers_random_tests.cmake  learner_random_forests_tests.cmake  learner_tests.cmake  (+7 more)
