include(CCMakeProtos.cmake)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

if(blom_BUILD_TESTS)
  enable_testing()
  include(GoogleTest)
  include(CCMakeHelper.cmake)
endif()
add_subdirectory(utils)
add_subdirectory(dataset)
add_subdirectory(metric)
add_subdirectory(model)
add_subdirectory(learner)
add_subdirectory(serving)
add_subdirectory(e2e_test_utils)

