add_library(
  formats
  STATIC
  formats.cc
)
target_include_directories(
  formats
  PRIVATE
  ${absl_SOURCE_DIR}
  ${protobuf_SOURCE_DIR}/src
  ${PROTOC_GENERATED_SOURCE_DIR}/dataset
)
target_link_libraries(
  formats
  PRIVATE
  dataset_proto
  logging
  absl::string_view
  protobuf::libprotoc
)

add_library(
  data_spec
  STATIC
  data_spec.cc
)
target_include_directories(
  data_spec
  PRIVATE
  ${absl_SOURCE_DIR}
  ${farmhash_SOURCE_DIR}/src
  ${protobuf_SOURCE_DIR}/src
)
target_link_libraries(
  data_spec
  PRIVATE
  dataset_proto
  logging
  regex
  absl::strings
  absl::string_view
  farmhash::farmhash
  protobuf::libprotoc
)

add_library(
  example_builder
  STATIC
  example_builder.cc
)
target_include_directories(
  example_builder
  PRIVATE
  ${absl_SOURCE_DIR}
  ${farmhash_SOURCE_DIR}/src
  ${protobuf_SOURCE_DIR}/src
)
target_link_libraries(
  example_builder
  PRIVATE
  dataset_proto
  logging
  data_spec
  absl::string_view
  protobuf::libprotoc
)

add_library(
  data_spec_inference
  STATIC
  data_spec_inference.cc
)
target_include_directories(
  data_spec_inference
  PRIVATE
  ${absl_SOURCE_DIR}
  ${farmhash_SOURCE_DIR}/src
  ${protobuf_SOURCE_DIR}/src
)
target_link_libraries(
  data_spec_inference
  PRIVATE
  logging
  sharded_io
  concurrency
  status_macros
  data_spec
  formats
  absl::string_view
  absl::status
  absl::statusor
  absl::raw_hash_set
)

add_library(
  example_reader
  STATIC
  example_reader.cc
)
target_include_directories(
  example_reader
  PRIVATE
  ${absl_SOURCE_DIR}
  ${protobuf_SOURCE_DIR}/src
)
target_link_libraries(
  example_reader
  PRIVATE
  data_spec
  formats
  status_macros
  absl::memory
  absl::status
  absl::statusor
  absl::strings
  absl::string_view
  protobuf::libprotoc
)

add_library(
  example_writer
  STATIC
  example_writer.cc
)
target_include_directories(
  example_writer
  PRIVATE
  ${absl_SOURCE_DIR}
  ${protobuf_SOURCE_DIR}/src
  ${farmhash_SOURCE_DIR}/src
)
target_link_libraries(
  example_writer
  PRIVATE
  data_spec
  formats
  registration
  status_macros
  sharded_io
  absl::strings
  absl::string_view
  absl::memory
  absl::status
  absl::statusor
  absl::strings
  absl::string_view
  protobuf::libprotoc
  farmhash::farmhash
)

add_library(
  vertical_dataset
  STATIC
  vertical_dataset.cc
  vertical_dataset_io.cc
)
target_include_directories(
  vertical_dataset
  PRIVATE
  ${absl_SOURCE_DIR}
  ${farmhash_SOURCE_DIR}/src
  ${protobuf_SOURCE_DIR}/src
)
target_link_libraries(
  vertical_dataset
  PRIVATE
  status_macros
  logging
  data_spec
  example_builder
  absl::string_view
  absl::cord
  absl::statusor
  absl::memory
  farmhash::farmhash
  protobuf::libprotoc
)

add_library(
  weight
  STATIC
  weight.cc
)
target_include_directories(
  weight
  PRIVATE
  ${absl_SOURCE_DIR}
  ${farmhash_SOURCE_DIR}/src
  ${protobuf_SOURCE_DIR}/src
  ${PROTOC_GENERATED_SOURCE_DIR}
)
target_link_libraries(
  weight
  PRIVATE
  dataset_proto
  learner_proto
  data_spec
  vertical_dataset
  logging
  status_macros
  absl::status
  absl::statusor
  protobuf::libprotoc
)


# Testing artifact

file(GLOB test_SRC_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *test.cc)
add_library(
  dataset_tests_obj 
  OBJECT
  ${test_SRC_FILES}
)
target_include_directories(
  dataset_tests_obj
  PRIVATE
  ${absl_SOURCE_DIR}
  ${googletest_SOURCE_DIR}
  ${farmhash_SOURCE_DIR}/src
  ${protobuf_SOURCE_DIR}/src
  ${PROTOC_GENERATED_SOURCE_DIR}
)
target_link_libraries(
  dataset_tests_obj
  PRIVATE
# other project objects
  utils_proto
# local objects
  weight
  formats
  data_spec
  example_builder
  data_spec_inference
  example_reader
  example_writer
  vertical_dataset
# third_party objects
  protobuf::libprotoc
  GTest::gtest_main GTest::gmock_main
)

