add_library(
  types
  STATIC
  types.cc
)
target_include_directories(
  types
  PRIVATE
  ${absl_SOURCE_DIR}
)
target_link_libraries(
  types
  PRIVATE
  absl::strings
)
add_library(dataset_types ALIAS types)

add_library(
  formats
  STATIC
  formats.cc
)
target_include_directories(
  formats
  PRIVATE
  ${absl_SOURCE_DIR}
  ${protobuf_SOURCE_DIR}/src
  ${PROTOC_GENERATED_SOURCE_DIR}
)
target_link_libraries(
  formats
  PRIVATE
  dataset_proto
  utils_logging
  absl::string_view
  protobuf::libprotoc
)
add_library(dataset_formats ALIAS formats)

add_library(
  data_spec
  STATIC
  data_spec.cc
)
target_include_directories(
  data_spec
  PRIVATE
  ${absl_SOURCE_DIR}
  ${farmhash_SOURCE_DIR}/src
  ${protobuf_SOURCE_DIR}/src
  ${PROTOC_GENERATED_SOURCE_DIR}
)
target_link_libraries(
  data_spec
  PRIVATE
  dataset_proto
  utils_logging
  utils_regex
  absl::strings
  absl::string_view
  farmhash::farmhash
  protobuf::libprotoc
)
add_library(dataset_data_spec ALIAS data_spec)

add_library(
  example_builder
  STATIC
  example_builder.cc
)
target_include_directories(
  example_builder
  PRIVATE
  ${absl_SOURCE_DIR}
  ${farmhash_SOURCE_DIR}/src
  ${protobuf_SOURCE_DIR}/src
  ${PROTOC_GENERATED_SOURCE_DIR}
)
target_link_libraries(
  example_builder
  PRIVATE
  dataset_proto
  utils_logging
  dataset_data_spec
  absl::string_view
  protobuf::libprotoc
)
add_library(dataset_example_builder ALIAS example_builder)

add_library(
  data_spec_inference
  STATIC
  data_spec_inference.cc
)
target_include_directories(
  data_spec_inference
  PRIVATE
  ${absl_SOURCE_DIR}
  ${farmhash_SOURCE_DIR}/src
  ${protobuf_SOURCE_DIR}/src
  ${PROTOC_GENERATED_SOURCE_DIR}
)
target_link_libraries(
  data_spec_inference
  PRIVATE
  utils_logging
  utils_sharded_io
  utils_concurrency
  utils_status_macros
  dataset_data_spec
  dataset_formats
  absl::string_view
  absl::status
  absl::statusor
  absl::raw_hash_set
)
add_library(dataset_data_spec_inference ALIAS data_spec_inference)

add_library(
  example_reader
  STATIC
  example_reader.cc
)
target_include_directories(
  example_reader
  PRIVATE
  ${absl_SOURCE_DIR}
  ${protobuf_SOURCE_DIR}/src
  ${PROTOC_GENERATED_SOURCE_DIR}
)
target_link_libraries(
  example_reader
  PRIVATE
  dataset_data_spec
  dataset_formats
  utils_status_macros
  absl::memory
  absl::status
  absl::statusor
  absl::strings
  absl::string_view
  protobuf::libprotoc
)
add_library(dataset_example_reader ALIAS example_reader)

add_library(
  example_writer
  STATIC
  example_writer.cc
)
target_include_directories(
  example_writer
  PRIVATE
  ${absl_SOURCE_DIR}
  ${protobuf_SOURCE_DIR}/src
  ${farmhash_SOURCE_DIR}/src
  ${PROTOC_GENERATED_SOURCE_DIR}
)
target_link_libraries(
  example_writer
  PRIVATE
  dataset_data_spec
  dataset_formats
  utils_registration
  utils_status_macros
  utils_sharded_io
  absl::strings
  absl::string_view
  absl::memory
  absl::status
  absl::statusor
  absl::strings
  absl::string_view
  protobuf::libprotoc
  farmhash::farmhash
)
add_library(dataset_example_writer ALIAS example_writer)

add_library(
  vertical_dataset
  STATIC
  vertical_dataset.cc
  vertical_dataset_io.cc
)
target_include_directories(
  vertical_dataset
  PRIVATE
  ${absl_SOURCE_DIR}
  ${farmhash_SOURCE_DIR}/src
  ${protobuf_SOURCE_DIR}/src
  ${PROTOC_GENERATED_SOURCE_DIR}
)
target_link_libraries(
  vertical_dataset
  PRIVATE
  utils_status_macros
  utils_logging
  dataset_data_spec
  dataset_example_builder
  dataset_example_reader
  dataset_example_writer
  absl::string_view
  absl::cord
  absl::statusor
  absl::memory
  farmhash::farmhash
  protobuf::libprotoc
)
add_library(dataset_vertical_dataset ALIAS vertical_dataset)

add_library(
  weight
  STATIC
  weight.cc
)
target_include_directories(
  weight
  PRIVATE
  ${absl_SOURCE_DIR}
  ${farmhash_SOURCE_DIR}/src
  ${protobuf_SOURCE_DIR}/src
  ${PROTOC_GENERATED_SOURCE_DIR}
)
target_link_libraries(
  weight
  PRIVATE
  dataset_proto
  learner_proto
  dataset_data_spec
  dataset_vertical_dataset
  utils_logging
  utils_status_macros
  absl::status
  absl::statusor
  protobuf::libprotoc
)
add_library(dataset_weight ALIAS weight)

add_library(
  csv_example_reader
  STATIC
  csv_example_reader.cc
)
target_include_directories(
  csv_example_reader
  PRIVATE
  ${absl_SOURCE_DIR}
  ${farmhash_SOURCE_DIR}/src
  ${protobuf_SOURCE_DIR}/src
  ${PROTOC_GENERATED_SOURCE_DIR}
)
target_link_libraries(
  csv_example_reader
  PRIVATE
  dataset_proto
  dataset_data_spec
  dataset_example_reader
  utils_csv
  utils_filesystem
  utils_logging
  utils_status_macros
  absl::strings
  absl::status
  absl::statusor
  absl::memory
)
add_library(dataset_csv_example_reader ALIAS csv_example_reader)

add_library(
  csv_example_writer
  STATIC
  csv_example_writer.cc
)
target_include_directories(
  csv_example_writer
  PRIVATE
  ${absl_SOURCE_DIR}
  ${farmhash_SOURCE_DIR}/src
  ${protobuf_SOURCE_DIR}/src
  ${PROTOC_GENERATED_SOURCE_DIR}
)
target_link_libraries(
  csv_example_writer
  PRIVATE
  dataset_proto
  dataset_data_spec
  dataset_example_writer
  utils_csv
  utils_filesystem
  utils_logging
  utils_status_macros
  absl::strings
  absl::status
  absl::statusor
  absl::memory
)
add_library(dataset_csv_example_writer ALIAS csv_example_writer)


# Testing artifact

file(GLOB test_SRC_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *test.cc)
add_library(
  dataset_tests_obj
  OBJECT
  ${test_SRC_FILES}
)
target_include_directories(
  dataset_tests_obj
  PRIVATE
  ${absl_SOURCE_DIR}
  ${googletest_SOURCE_DIR}
  ${farmhash_SOURCE_DIR}/src
  ${protobuf_SOURCE_DIR}/src
  ${PROTOC_GENERATED_SOURCE_DIR}
)
target_link_libraries(
  dataset_tests_obj
  PRIVATE
# other project objects
  utils_proto
  learner_proto
  utils_testing_utils
# local objects
  dataset_weight
  dataset_formats
  dataset_data_spec
  dataset_example_builder
  dataset_data_spec_inference
  dataset_example_reader
  dataset_example_writer
  dataset_vertical_dataset
  dataset_csv_example_reader
  dataset_csv_example_writer
# third_party objects
  protobuf::libprotoc
  GTest::gtest_main GTest::gmock_main
)

