add_subdirectory(decision_tree)
add_subdirectory(random_forests)

add_library(
  fast_engine_factory
  STATIC
  fast_engine_factory.cc
)
target_include_directories(
  fast_engine_factory
  PRIVATE
  ${absl_SOURCE_DIR}
  ${protobuf_SOURCE_DIR}/src
  ${farmhash_SOURCE_DIR}/src
  ${PROTOC_GENERATED_SOURCE_DIR}
)
target_link_libraries(
  fast_engine_factory
  PRIVATE
  utils_registration
  absl::strings
  absl::status
  absl::statusor
  protobuf::libprotoc
  farmhash::farmhash
)
add_library(model_fast_engine_factory ALIAS fast_engine_factory)

add_library(
  abstract_model
  STATIC
  abstract_model.cc
)
target_include_directories(
  abstract_model
  PRIVATE
  ${absl_SOURCE_DIR}
  ${protobuf_SOURCE_DIR}/src
  ${farmhash_SOURCE_DIR}/src
  ${PROTOC_GENERATED_SOURCE_DIR}
)
target_link_libraries(
  abstract_model
  PRIVATE
  model_proto
  dataset_proto
  dataset_data_spec 
  dataset_vertical_dataset
  dataset_weight
  metric_metric
  metric_uplift
  metric_ranking_utils
  model_fast_engine_factory
  serving_example_set
  utils_concurrency
  utils_logging
  utils_distribution
  utils_sharded_io
  utils_status_macros
  absl::status
  absl::statusor
  absl::strings
  protobuf::libprotoc
  farmhash::farmhash
)
add_library(model_abstract_model ALIAS abstract_model)

add_library(
  metadata
  STATIC
  metadata.cc
)
target_include_directories(
  metadata
  PRIVATE
  ${absl_SOURCE_DIR}
  ${protobuf_SOURCE_DIR}/src
  ${farmhash_SOURCE_DIR}/src
  ${PROTOC_GENERATED_SOURCE_DIR}
)
target_link_libraries(
  metadata
  PRIVATE
  model_proto
  absl::strings
)
add_library(model_metadata ALIAS metadata)


